package com.maxqiu.demo.P05_Adapter.Mode3_InterfaceAdapter;

/**
 * 通用电源适配器
 * 
 * @author Max_Qiu
 */
public interface IVoltage {

    Integer output5V();

    Integer output9V();

    Integer output12V();
}
